--- a/main.css
+++ b/main.css
@@ -2,12 +2,15 @@ html,
 body {
   margin: 0;
   padding: 0;
+  border: 0;
   font-size: 100%;
-  line-height: 1.5;
+  vertical-align: baseline;
+  line-height: 1;
+  box-sizing: border-box;
 }
 
 body {
-  width: 100%;
+  max-width: 100vw;
   height: 100vh;
   background: url('assets/freedom.jpg') no-repeat center;
   background-size: cover;
@@ -15,19 +18,27 @@ body {
 }
 
 .wrapper {
-  padding-top: 4rem;
-  width: 90%;
-  margin: 0 auto;
+  margin-top: 1.5rem;
   text-align: center;
 }
 
 .quote {
   font-family: 'Julius Sans One', sans-serif;
-  font-size: 2.5rem; 
+  font-size: 2rem;
+  /*margin: 0 auto;*/
 }
 
 .author {
   font-family: 'Crimson Text', serif;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-style: italic;
-} 
+}
+
+@media (min-width: 768px) {
+  .quote {
+    font-size: 3.6rem;
+  }
+  .author {
+    font-size: 2.4rem;
+  }
+}
